--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/KevinSee/sroem
 BugReports: https://github.com/KevinSee/sroem/issues
+Depends: 
+    R (>= 2.10)
+LazyData: true
