added a function to print model coefficients

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(correlate_rchs)
 export(estimate_redds)
 export(fit_gauc)
 export(predict_neterr)
+export(print_mod_summ)
 export(summarize_redds)
+import(broom)
 import(corrr)
 import(dplyr)
 import(lubridate)
@@ -12,3 +14,4 @@ import(msm)
 import(purrr)
 import(tibble)
 import(tidyr)
+importFrom(broom,tidy)
