added 3 functions from another source to query very specific data for the Wenatchee and Methow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,14 +5,26 @@ export(correlate_rchs)
 export(estimate_redds)
 export(fit_gauc)
 export(predict_neterr)
+export(prep_met_sthd_data)
+export(prep_wen_sthd_data)
 export(print_mod_summ)
+export(query_redd_data)
 export(summarize_redds)
 import(corrr)
+import(dataRetrieval)
 import(dplyr)
+import(forcats)
+import(janitor)
 import(lubridate)
 import(msm)
 import(purrr)
+import(readr)
+import(readxl)
+import(rlang)
+import(stringr)
 import(tibble)
 import(tidyr)
+importFrom(DescTools,BinomCI)
 importFrom(broom,tidy)
+importFrom(msm,deltamethod)
 importFrom(tidyr,pivot_longer)
