updated prep functions to load .Rdata objects instead of reading from a spreadsheet. Wrote a function to load .Rdata objects and return certain components.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ export(predict_neterr)
 export(prep_met_sthd_data)
 export(prep_wen_sthd_data)
 export(print_mod_summ)
+export(query_dabom_results)
 export(query_redd_data)
 export(summarize_redds)
+import(coda)
 import(corrr)
 import(dataRetrieval)
 import(dplyr)
